[package]
name = "p1-meter"
version = "0.1.0"
authors = ["Robin Bolscher <robinbolscher@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mio = "0.6"
mio-serial = "3.3"
tokio = { version = "0.2.22", features = ["full"] }
reqwest = "0.10"
chrono = "0.4.19"